2007-01-15 17:20 goffioul
	* main/image/src/pngread.cc: opens image file in binary mode
	  to avoid automatic LF->CRLF conversion with MSVC

2007-01-15 17:17 goffioul
	* main/gsl/src/Makefile: defines GSL_DLL for compilation
	  with MSVC
	* main/gsl/src/precode.cc.template: missing return statement

2007-01-15 17:15 goffioul
	* main/io/src/textread.cc: mismatch between declared return
	  value and "return" statements

2007-01-15 17:11 goffioul
	* main/octcdf/src/: ov-ncatt.cc, ov-ncvar.cc: make sure
	  dim_vector objects are not resized < 2; use lo_ieee_isnan
	  instead of isnan

2007-01-15 17:08 goffioul
	* extra/MacOSX/doc/Makefile,
	  extra/symband/doc/Makefile: s/dvipdf/$(DVIPDF)

2007-01-08 21:57  adb014

	* www/: Makefile, get-base-address, octave-forge.css: fix
	  validation errors in html

2007-01-08 21:50  hauberg

	* www/macros.m4: Current page isn't clickable in the top menu

2007-01-08 21:30  adb014

	* www/: NEWS.in, index.in: Update news items

2007-01-08 21:29  adb014

	* admin/make_index: Remove spurious output

2007-01-08 21:28  adb014

	* main/statistics/INDEX: That should read jsu{cdf,pdf} and not
	  jus{cdf,pdf}

2007-01-08 21:22  adb014

	* main/: miscellaneous/inst/zagzig.m, miscellaneous/inst/zigzag.m,
	  octcdf/inst/nctest.m: Fix copyright for AUTHORS build

2007-01-08 21:21  adb014

	* main/image/INDEX: index missing functions

2007-01-08 21:18  adb014

	* main/gsl/INDEX: index gdl_sf

2007-01-08 21:18  adb014

	* main/fixed/src/fixed.cc: modify macro to aid indexing

2007-01-08 21:16  adb014

	* main/INDEX: Fix INDEX for new and removed functions

2007-01-08 21:13  adb014

	* extra/xraylib/src/xraylib.cc: reorganize macros to aid indexing

2007-01-08 21:13  adb014

	* extra/xraylib/PKG_ADD: Add missing DCSP_Thoms function to
	  autoload

2007-01-08 21:12  adb014

	* extra/symband/src/Makefile: error in makefile prevented oct-file
	  being built

2007-01-08 21:09  adb014

	* extra/graceplot/: COPYING, DESCRIPTION, INDEX, NOINSTALL,